fix shift carousel items

--- a/src/components/Carousel/styles.module.css
+++ b/src/components/Carousel/styles.module.css
@@ -1,3 +1,11 @@
+.root {
+    display: flex;
+    position: relative;
+    width: 100%;
+    padding: 8px 52px;
+}
+
+
 .next,
 .prev {
     display: flex;
@@ -14,6 +22,9 @@
     user-select: none;
     border-radius: 50%;
     transition: all 250ms;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .prev:hover,
@@ -23,22 +34,16 @@
 }
 
 .prev {
-    position: absolute;
     left: 0;
 }
 
 .next {
-    position: absolute;
     right: 0;
 }
 
 .container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 1rem;
     width: 100%;
-    padding: 8px 52px;
+    
 }
 
 .viewport {
@@ -58,27 +63,4 @@
     flex-grow: 1;
     white-space: normal;
     flex-shrink: 0;
-}
-
-.root {
-    display: flex;
-    position: relative;
-    width: 100%;
-}
-
-@media screen and (max-width: 700px) {
-    .prev,
-    .next {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-
-    .prev {
-        left: 10px;
-    }
-
-    .next {
-        right: 10px;
-    }
 }
